--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- font-awesome -->
     <script src="https://kit.fontawesome.com/54a2f81cad.js" crossorigin="anonymous"></script>
-    <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    
     <style>
         body{
             font-family: 'Poppins', sans-serif;
@@ -79,98 +78,105 @@
 </head>
 <body>
     <header>
-        <section class="container-fluid bg">
+      <section class="container-fluid bg">
 
-          <!-- navbar -->
+        <!-- navbar -->
 
-            <div class="d-flex justify-content-end">
-                <nav class="navbar navbar-expand-lg navbar-light bg pt-5 me-5">
-                    <div class="container-fluid">                     
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">Shop</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">News</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">Contact</a>
-                          </li>
-                        </ul>
-                        <a class="navbar-brand text-light login-btn" href="#">Login</a>
-                      </div>
-                    </div>
-                  </nav>
-            </div>
-
-            <!-- Hero section -->
-
-
-            <div class="d-flex justify-content-evenly align-items-center p pt-5 mt-5">
+        <div class="d-flex justify-content-end">
+          <nav class="navbar navbar-expand-lg navbar-light bg pt-5 me-5">
+              <div class="container-fluid">                     
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-light" aria-current="page" href="#">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-light" aria-current="page" href="#">News</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-light" aria-current="page" href="#">Contact</a>
+                    </li>
+                  </ul>
+                  <a class="navbar-brand text-light login-btn" href="#">Login</a>
+                </div>
+              </div>
+            </nav>
+      </div>
+        
+        <div class="row justify-content-md-center m-lg-5 p-lg-5">
+            <div class="col-lg-6 col-md-6 col-sm-12 cols-12 p-4 d-flex align-items-center g-4">
+              <div>
+                <p class="text-light">Computer-controlled digital transistorized with electronic advance</p>
+                <h1 class="text-light h1">Honda CBR 300R</h1>
+                <p class="text-light">Honda CBR 300R is the most stylish and dashing bike. To see <br> Honda CBR 300R Price In BD and showroom with details see <br> here colours and some new features.</p>
                 <div>
-                    <p class="text-light">Computer-controlled digital transistorized with electronic advance</p>
-                    <h1 class="text-light h1">Honda CBR 300R</h1>
-                    <p class="text-light">Honda CBR 300R is the most stylish and dashing bike. To see <br> Honda CBR 300R Price In BD and showroom with details see <br> here colours and some new features.</p>
-                    <div>
-                      <!-- Button trigger modal -->
-                          <button type="button" class="text-light button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Purchase
-                          </button>
+                  <!-- Button trigger modal -->
+                      <button type="button" class="text-light button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Purchase
+                      </button>
 
-                          <!-- Modal -->
-                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h5 class="modal-title" id="exampleModalLabel">Purchase Note</h5>
-                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                  Thank you for purchasing our product. Your support and trust in us are much appreciated. For your next purchase, use coupon code: MAGE30% and get 30% discount on any product. <br> <br> Cheers,
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="text-light button" data-bs-dismiss="modal">Close</button>
-                                  <button type="button" class="text-light button">Save changes</button>
-                                </div>
-                              </div>
+                      <!-- Modal -->
+                      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">Purchase Note</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                              Thank you for purchasing our product. Your support and trust in us are much appreciated. For your next purchase, use coupon code: MAGE30% and get 30% discount on any product. <br> <br> Cheers,
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="text-light button" data-bs-dismiss="modal">Close</button>
+                              <button type="button" class="text-light button">Save changes</button>
                             </div>
                           </div>
-                    </div>
-                </div>
-                <div>
-                    <img src="images/header-bike.png" alt="">
+                        </div>
+                      </div>
                 </div>
             </div>
-        </section>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 p-4 text-center"> 
+              <div>
+                <img class="img-fluid" src="images/header-bike.png" alt="">
+            </div>
+            </div>
+        </div>
+    </section>
     </header>
     <main>
 
-      <!-- featured bike -->
-
-        <section class="container my-5">
-            <div class="pt-4">
-                <h1 class="text-center h1">Fetured Bikes 2021</h1>
-                <p class="text-center" style="color: #E76F51;">Best bike collection</p>
+      <!-- feature bike -->
+      <section class="container-fluid">
+        <div class="pt-4 py-5">
+          <h1 class="text-center h1">Fetured Bikes 2021</h1>
+          <p class="text-center" style="color: #E76F51;">Best bike collection</p>
+      </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 d-flex align-items-center justify-content-md-center py-5">
+            <div class="col">
+              <div>
+                <img class="img-fluid img" src="images/header-bike.png" alt="">
             </div>
-            <div class="d-flex justify-content-center align-items-center py-5 my-5">
+              </div>
+              <div class="col">
                 <div>
-                    <img class="img-fluid img" src="images/header-bike.png" alt="">
-                </div>
+                  <img class="img-fluid" src="images/feature-bike.jpg" alt="">
+              </div>
+              </div>
+              <div class="col">
                 <div>
-                    <img class="img-fluid" src="images/feature-bike.jpg" alt="">
-                </div>
-                <div>
-                    <img class="img-fluid img" src="images/header-bike.png" alt="">
-                </div>
+                  <img class="img-fluid img" src="images/header-bike.png" alt="">
+              </div>
+              </div>
             </div>
-        </section>
+        </div>
+    </section>
 
 
         <!-- latest News -->
